--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,9 @@
 body {
-    background-color: lightblue;
+    background-color: lightpink;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 25px 50px 75px 100px;
+    margin: 25px 50px 75px 100px;
   }
-
-#p1 {
-    background-color: white
-}
 
 nav ul {
 	text-align: center;
@@ -22,4 +20,21 @@ img {
     width: 400px; 
     height: 400px;
 }
+
+#p3{
+    background-color: black;
+    color:yellow;
+}
+
+#p4{
+    background-color: black;
+    color: yellow; 
+}
+
+.title .centered{
+    text-align: center;
+}
+
+
+
 
