--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     background-color: lightpink;
-    font-family: Arial, Helvetica, sans-serif;
+    color: whitesmoke;
+    font-family: Verdana, sans-serif;
     padding: 25px 50px 75px 100px;
     margin: 25px 50px 75px 100px;
   }
@@ -35,6 +36,8 @@ img {
     text-align: center;
 }
 
-
+.size .caption {
+    font-size: 13px; 
+}
 
 
