--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 body {
+    padding: 25px 50px 75px 100px;
+    margin: 25px 50px 75px 100px;
     background-color: lightpink;
     color: whitesmoke;
     font-family: Verdana, sans-serif;
-    padding: 25px 50px 75px 100px;
-    margin: 25px 50px 75px 100px;
-  }
+    font-size: 90%;
+}
 
 nav ul {
 	text-align: center;
@@ -20,6 +21,9 @@ nav ul li {
 img {
     width: 500px; 
     height: 500px;
+    border-radius: 14px;
+    border: white 5px;
+    outline: black solid 10px;
 }
 
 #p3{
@@ -34,10 +38,13 @@ img {
 
 .title .centered{
     text-align: center;
+    text-shadow: 2px 2px rgba(255, 0, 170, 0.541);
 }
 
 .size .caption {
     font-size: 13px; 
+    
 }
+
 
 
